compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__decl__test__parse_ty_decl_prim.snap
---
source: compiler/flux-parser/src/grammar/decl.rs
expression: parse.to_string()
---
TypeDecl@0..12
  TypeKw@0..4 "type"
  Whitespace@4..5 " "
  Ident@5..8 "Foo"
  Whitespace@8..9 " "
  PrimitiveType@9..12
    INKw@9..12 "i32"
