compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__decl__test__parse_ty_decl_struct.snap
---
source: compiler/flux-parser/src/grammar/decl.rs
expression: "&parse.debug_tree()"
---
TypeDecl@0..70
  TypeKw@0..4 "type"
  Whitespace@4..5 " "
  Ident@5..8 "Foo"
  Whitespace@8..9 " "
  StructType@9..70
    StructKw@9..15 "struct"
    Whitespace@15..16 " "
    RBrace@16..17 "{"
    Whitespace@17..20 "\n\t\t"
    StructTypeField@20..28
      PrimitiveType@20..23
        INKw@20..22 "i7"
        Whitespace@22..23 " "
      Ident@23..24 "x"
      SemiColon@24..25 ";"
      Whitespace@25..28 "\n\t\t"
    StructTypeField@28..40
      PubKw@28..31 "pub"
      Whitespace@31..32 " "
      PrimitiveType@32..35
        UNKw@32..34 "u1"
        Whitespace@34..35 " "
      Ident@35..36 "y"
      SemiColon@36..37 ";"
      Whitespace@37..40 "\n\t\t"
    StructTypeField@40..53
      MutKw@40..43 "mut"
      Whitespace@43..44 " "
      PrimitiveType@44..48
        F64Kw@44..47 "f64"
        Whitespace@47..48 " "
      Ident@48..49 "z"
      SemiColon@49..50 ";"
      Whitespace@50..53 "\n\t\t"
    StructTypeField@53..69
      PubKw@53..56 "pub"
      Whitespace@56..57 " "
      MutKw@57..60 "mut"
      Whitespace@60..61 " "
      IdentType@61..65
        Ident@61..64 "Bar"
        Whitespace@64..65 " "
      Ident@65..66 "a"
      SemiColon@66..67 ";"
      Whitespace@67..69 "\n\t"
    RBrace@69..70 "}"
